add filter sub type

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -367,60 +367,38 @@ limitations under the License. -->
   <string name="update_filter_msg">Der Filter \'%1$s\' wurde aktualisiert.</string>
   <string name="filter_null_name">Kein Filter</string>
   <string name="filter_null_desc">Dieser Filter führt keine Filterung durch.</string>
-  <string name="filter_percentagechangegreater_name">Aktienpreisänderung % größer als</string>
-  <string name="filter_percentagechangegreater_desc"></string>
-  <string name="filter_percentagechangeless_name">Aktienpreisänderung % kleiner als</string>
-  <string name="filter_percentagechangeless_desc"></string>
-  <string name="filter_symbolcontainstype_name">Aktienkürzel enthält</string>
-  <string name="filter_symbolcontainstype_desc"></string>
-  <string name="filter_displaynamecontainstype_name">Anzeigename enthält</string>
-  <string name="filter_displaynamecontainstype_desc"></string>
-  <string name="filter_notecontainstype_name">Anmerkung enthält</string>
-  <string name="filter_notecontainstype_desc"></string>
-  <string name="filter_dividendnotecontainstype_name">Dividendenanmerkung enthält</string>
-  <string name="filter_dividendnotecontainstype_desc"></string>
-  <string name="filter_assetgreater_name">Bestand größer als</string>
-  <string name="filter_assetgreater_desc"></string>
-  <string name="filter_assetless_name">Bestand kleiner als</string>
-  <string name="filter_assetless_desc"></string>
-  <string name="filter_profitgreater_name">Gewinn größer als</string>
-  <string name="filter_profitgreater_desc"></string>
-  <string name="filter_profitless_name">Gewinn kleiner als</string>
-  <string name="filter_profitless_desc"></string>
-  <string name="filter_profitpercentagegreater_name">Gewinn % größer als</string>
-  <string name="filter_profitpercentagegreater_desc"></string>
-  <string name="filter_profitpercentageless_name">Gewinn % kleiner als</string>
-  <string name="filter_profitpercentageless_desc"></string>
-  <string name="filter_dividendpercentagegreater_name">Dividende % größer als</string>
-  <string name="filter_dividendpercentagegreater_desc"></string>
-  <string name="filter_dividendpercentageless_name">Dividende % kleiner als</string>
-  <string name="filter_dividendpercentageless_desc"></string>
-  <string name="filter_firstassetsoldbefore_name">Früheste Aktien verkauft bevor</string>
-  <string name="filter_firstassetsoldbefore_desc"></string>
-  <string name="filter_firstassetsoldafter_name">Früheste Aktien verkauft nach</string>
-  <string name="filter_firstassetsoldafter_desc"></string>
-  <string name="filter_firstassetboughtbefore_name">Früheste Aktien gekauft bevor</string>
-  <string name="filter_firstassetboughtbefore_desc"></string>
-  <string name="filter_firstassetboughtafter_name">Früheste Aktien gekauft nach</string>
-  <string name="filter_firstassetboughtafter_desc"></string>
-  <string name="filter_lastassetsoldbefore_name">Letzte Aktien verkauft bevor</string>
-  <string name="filter_lastassetsoldbefore_desc"></string>
-  <string name="filter_lastassetsoldafter_name">Letzte Aktien verkauft nach</string>
-  <string name="filter_lastassetsoldafter_desc"></string>
-  <string name="filter_lastassetboughtbefore_name">Letzte Aktien gekauft bevor</string>
-  <string name="filter_lastassetboughtbefore_desc"></string>
-  <string name="filter_lastassetboughtafter_name">Letzte Aktien gekauft nach</string>
-  <string name="filter_lastassetboughtafter_desc"></string>
+  <string name="filter_percentagechange_name">Aktienpreisänderung %</string>
+  <string name="filter_percentagechange_desc"></string>
+  <string name="filter_symbolname_name">Aktienkürzel</string>
+  <string name="filter_symbolname_desc"></string>
+  <string name="filter_displayname_name">Anzeigename</string>
+  <string name="filter_displayname_desc"></string>
+  <string name="filter_note_name">Anmerkung</string>
+  <string name="filter_note_desc"></string>
+  <string name="filter_dividendnote_name">Dividendenanmerkung</string>
+  <string name="filter_dividendnote_desc"></string>
+  <string name="filter_asset_name">Bestand</string>
+  <string name="filter_asset_desc"></string>
+  <string name="filter_profit_name">Gewinns</string>
+  <string name="filter_profit_desc"></string>
+  <string name="filter_profitpercentage_name">Gewinn %</string>
+  <string name="filter_profitpercentage_desc"></string>
+  <string name="filter_dividendpercentage_name">Dividende %s</string>
+  <string name="filter_dividendpercentage_desc"></string>
+  <string name="filter_firstassetsold_name">Früheste Aktien verkauft</string>
+  <string name="filter_firstassetsold_desc"></string>
+  <string name="filter_firstassetbought_name">Früheste Aktien gekauft</string>
+  <string name="filter_firstassetbought_desc"></string>
+  <string name="filter_lastassetsold_name">Letzte Aktien verkauft</string>
+  <string name="filter_lastassetsold_desc"></string>
+  <string name="filter_lastassetbought_name">Letzte Aktien gekauft</string>
+  <string name="filter_lastassetbought_desc"></string>
   <string name="filter_longterm_name">Letzte Aktien vor einem Jahr gekauft</string>
   <string name="filter_longterm_desc">Aktien die vor einem Jahr oder mehr gekauft worden sind, haben beim Verkauf einen Steuervorteil.</string>
-  <string name="filter_quantitygreater_name">Aktienanzahl größer als</string>
-  <string name="filter_quantitygreater_desc"></string>
-  <string name="filter_quantityless_name">Aktienanzahl kleiner als</string>
-  <string name="filter_quantityless_desc"></string>
-  <string name="filter_capitalgaingreater_name">Ausgeführter Kapitalgewinn größer als</string>
-  <string name="filter_capitalgaingreater_desc"></string>
-  <string name="filter_capitalgainless_name">Ausgeführter Kapitalgewinn kleiner als</string>
-  <string name="filter_capitalgainless_desc"></string>
+  <string name="filter_quantity_name">Aktienanzahls</string>
+  <string name="filter_quantity_desc"></string>
+  <string name="filter_capitalgain_name">Ausgeführter Kapitalgewinns</string>
+  <string name="filter_capitalgain_desc"></string>
   <string name="filter_name">Filtername</string>
   <string name="filter_name_not_empty">Geben Sie einen Filternamen ein.</string>
   <string name="add_filter_set">Filtersatz hinzufügen</string>
@@ -434,4 +412,10 @@ limitations under the License. -->
   <string name="filter_default_name">Standardfilter</string>
   <string name="save_filter_error">Der Filter konnte nicht gespeichert werden:\n%1$s</string>
   <string name="load_filter_error">Der Filter konnte nicht geladen werden:\n%1$s</string>
+  <string name="filter_GreaterThanType">größer als</string>
+  <string name="filter_LessThanType">kleiner als</string>
+  <string name="filter_BeforeDateType">bevor Datum</string>
+  <string name="filter_AfterDateType">nach Datum</string>
+  <string name="filter_ContainsType">enthält</string>
+  <string name="filter_NotContainsType">enthält nicht</string>
 </resources>
