--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -370,60 +370,38 @@ limitations under the License. -->
   <string name="update_filter_msg">The filter \'%1$s\' was updated.</string>
   <string name="filter_null_name">No filter</string>
   <string name="filter_null_desc">This filter does not filter any items.</string>
-  <string name="filter_percentagechangegreater_name">Stock price change % greater than</string>
-  <string name="filter_percentagechangegreater_desc"></string>
-  <string name="filter_percentagechangeless_name">Stock price change % less than</string>
-  <string name="filter_percentagechangeless_desc"></string>
-  <string name="filter_symbolcontainstype_name">Symbol contains</string>
-  <string name="filter_symbolcontainstype_desc"></string>
-  <string name="filter_displaynamecontainstype_name">Display name contains</string>
-  <string name="filter_displaynamecontainstype_desc"></string>
-  <string name="filter_notecontainstype_name">Note contains</string>
-  <string name="filter_notecontainstype_desc"></string>
-  <string name="filter_dividendnotecontainstype_name">Dividend note contains</string>
-  <string name="filter_dividendnotecontainstype_desc"></string>
-  <string name="filter_assetgreater_name">Asset greater than</string>
-  <string name="filter_assetgreater_desc"></string>
-  <string name="filter_assetless_name">Asset less than</string>
-  <string name="filter_assetless_desc"></string>
-  <string name="filter_profitgreater_name">Profit greater than</string>
-  <string name="filter_profitgreater_desc"></string>
-  <string name="filter_profitless_name">Profit less than</string>
-  <string name="filter_profitless_desc"></string>
-  <string name="filter_profitpercentagegreater_name">Profit % greater than</string>
-  <string name="filter_profitpercentagegreater_desc"></string>
-  <string name="filter_profitpercentageless_name">Profit % less than</string>
-  <string name="filter_profitpercentageless_desc"></string>
-  <string name="filter_dividendpercentagegreater_name">Dividend % greater than</string>
-  <string name="filter_dividendpercentagegreater_desc"></string>
-  <string name="filter_dividendpercentageless_name">Dividend % less than</string>
-  <string name="filter_dividendpercentageless_desc"></string>
-  <string name="filter_firstassetsoldbefore_name">First asset sold before</string>
-  <string name="filter_firstassetsoldbefore_desc"></string>
-  <string name="filter_firstassetsoldafter_name">First asset sold after</string>
-  <string name="filter_firstassetsoldafter_desc"></string>
-  <string name="filter_firstassetboughtbefore_name">First asset bought before</string>
-  <string name="filter_firstassetboughtbefore_desc"></string>
-  <string name="filter_firstassetboughtafter_name">First asset bought after</string>
-  <string name="filter_firstassetboughtafter_desc"></string>
-  <string name="filter_lastassetsoldbefore_name">Last asset sold before</string>
-  <string name="filter_lastassetsoldbefore_desc"></string>
-  <string name="filter_lastassetsoldafter_name">Last asset sold after</string>
-  <string name="filter_lastassetsoldafter_desc"></string>
-  <string name="filter_lastassetboughtbefore_name">Last asset bought before</string>
-  <string name="filter_lastassetboughtbefore_desc"></string>
-  <string name="filter_lastassetboughtafter_name">Last asset bought after</string>
-  <string name="filter_lastassetboughtafter_desc"></string>
+  <string name="filter_percentagechange_name">Stock price change %</string>
+  <string name="filter_percentagechange_desc"></string>
+  <string name="filter_symbolname_name">Symbol</string>
+  <string name="filter_symbolname_desc"></string>
+  <string name="filter_displayname_name">Display name</string>
+  <string name="filter_displayname_desc"></string>
+  <string name="filter_note_name">Note</string>
+  <string name="filter_note_desc"></string>
+  <string name="filter_dividendnote_name">Dividend note</string>
+  <string name="filter_dividendnote_desc"></string>
+  <string name="filter_asset_name">Asset</string>
+  <string name="filter_asset_desc"></string>
+  <string name="filter_profit_name">Profitn</string>
+  <string name="filter_profit_desc"></string>
+  <string name="filter_profitpercentage_name">Profit %</string>
+  <string name="filter_profitpercentage_desc"></string>
+  <string name="filter_dividendpercentage_name">Dividend %</string>
+  <string name="filter_dividendpercentage_desc"></string>
+  <string name="filter_firstassetsold_name">First asset sold</string>
+  <string name="filter_firstassetsold_desc"></string>
+  <string name="filter_firstassetbought_name">First asset bought</string>
+  <string name="filter_firstassetbought_desc"></string>
+  <string name="filter_lastassetsold_name">Last asset sold</string>
+  <string name="filter_lastassetsold_desc"></string>
+  <string name="filter_lastassetbought_name">Last asset</string>
+  <string name="filter_lastassetbought_desc"></string>
   <string name="filter_longterm_name">Last asset bought long term</string>
   <string name="filter_longterm_desc">Stocks bought at least one year ago have less capital gain tax when sold.</string>
-  <string name="filter_quantitygreater_name">Stock quantity greater than</string>
-  <string name="filter_quantitygreater_desc"></string>
-  <string name="filter_quantityless_name">Stock quantity less than</string>
-  <string name="filter_quantityless_desc"></string>
-  <string name="filter_capitalgaingreater_name">Executed Capital Gain greater than</string>
-  <string name="filter_capitalgaingreater_desc"></string>
-  <string name="filter_capitalgainless_name">Executed Capital Gain less than</string>
-  <string name="filter_capitalgainless_desc"></string>
+  <string name="filter_quantity_name">Stock quantity</string>
+  <string name="filter_quantity_desc"></string>
+  <string name="filter_capitalgain_name">Executed Capital Gain</string>
+  <string name="filter_capitalgain_desc"></string>
   <string name="filter_name">Filter name</string>
   <string name="filter_name_not_empty">Enter a filter name.</string>
   <string name="add_filter_set">Add filter set</string>
@@ -437,4 +415,10 @@ limitations under the License. -->
   <string name="filter_default_name">Standard Filter</string>
   <string name="save_filter_error">The filter could not be saved:\n%1$s</string>
   <string name="load_filter_error">The filter could not be loaded:\n%1$s</string>
+  <string name="filter_GreaterThanType">greater than</string>
+  <string name="filter_LessThanType">less than</string>
+  <string name="filter_BeforeDateType">before date</string>
+  <string name="filter_AfterDateType">after date</string>
+  <string name="filter_ContainsType">contains</string>
+  <string name="filter_NotContainsType">not contains</string>
 </resources>
