--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -89,12 +89,12 @@ limitations under the License. -->
 
   <string name="hint_add_stock">Aktienkürzel</string>
   <string name="button_add">Hinzufügen</string>
-  <string name="sort_change_percentage">Nach Änderung % sortieren</string>
+  <string name="sort_change_percentage">Nach Änderung \u0025 sortieren</string>
   <string name="sort_name">Nach Namen sortieren</string>
   <string name="sort_assets">Nach Bestand sortieren</string>
   <string name="sort_profit">Nach Gewinn sortieren</string>
-  <string name="sort_profit_percentage">Nach Gewinn % sortieren</string>
-  <string name="sort_dividend_percentage">Nach Dividende % sortieren</string>
+  <string name="sort_profit_percentage">Nach Gewinn \u0025 sortieren</string>
+  <string name="sort_dividend_percentage">Nach Dividende \u0025 sortieren</string>
   <string name="sort_group">Nach Gruppe sortieren</string>
   <string name="sort_unsorted">Nach Einfügedatum sortiert</string>
 
