--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -120,12 +120,12 @@ limitations under the License. -->
   <string name="alert_loss_below">Wenn Verlust unterschritten</string>
   <string name="alert_note">Anmerkung</string>
   <string name="note_in_list">Anmerkung:</string>
-  <string name="alert_above_in_list">Benachr. Aktienwert über:</string>
-  <string name="alert_below_in_list">Benachr. Aktienwert unter:</string>
-  <string name="alert_gain_above_in_list">Benachr. Gewinn über:</string>
-  <string name="alert_gain_below_in_list">Benachr. Gewinn unter:</string>
-  <string name="alert_loss_above_in_list">Benachr. Verlust über:</string>
-  <string name="alert_loss_below_in_list">Benachr. Verlust unter:</string>
+  <string name="alert_above_in_list">Benachr. Aktienwert über</string>
+  <string name="alert_below_in_list">Benachr. Aktienwert unter</string>
+  <string name="alert_gain_above_in_list">Benachr. Gewinn über</string>
+  <string name="alert_gain_below_in_list">Benachr. Gewinn unter</string>
+  <string name="alert_loss_above_in_list">Benachr. Verlust über</string>
+  <string name="alert_loss_below_in_list">Benachr. Verlust unter</string>
   <string name="alert_above_error">Unterschrittener Wert muss kleiner als überschrittener Wert sein.</string>
   <string name="alert_below_error">Überschrittener Wert muss größer als unterschrittener Wert sein.</string>
   <string name="alert_above_notification_title">%1$s ist jetzt über %2$s bei %3$s</string>
